Modificação do delete
