# src/app/controllers/posterPicture.controller.js
@@ -24,16 +24,17 @@ const create = async (req, res) => {
 
     const existedPictures = await posterPictureService.getByPosterId(poster.id);
 
-    log.info(`Teste. userId=${existedPictures.count}`);
-    log.info('Fazendo upload da imagem');
+    log.info(`Teste. userId=${existedPictures.count < 4}`);
+
     let picture = null;
-    if ( existedPictures.count > 4) {
+    if ( !existedPictures && existedPictures.count > 4) {
       return res
       .status(StatusCodes.NOT_FOUND)
-      .json({ error: 'Imagem não encontrado' });
+      .json({ error: 'Imagem não encontrado ou limite maximo atingido' });
     } else {
-      log.info('criando imagem no banco de dados');
+      log.info('Fazendo upload da imagem');
       const uploadPicture = await firebaseService.upload(file);
+      log.info('criando imagem no banco de dados');
       picture = await posterPictureService.create(poster.id, uploadPicture);
     }
 
@@ -57,62 +58,13 @@ const create = async (req, res) => {
   }
 };
 
-// const edit = async (req, res) => {
-//   try {
-//     const { user, file } = req;
-//     const { pictureId } = req.param;
-
-//     log.info(
-//       `Inicializando atualização da foto do anuncio do usuário. userId=${user.id}`,
-//     );
-//     log.info(`Buscando anuncio do usuário logado. userId=${user.id}`);
-//     const poster = await posterService.getByUserId(user.id);
-
-//     if (!poster) {
-//       return res
-//         .status(StatusCodes.NOT_FOUND)
-//         .json({ error: 'Anuncio não encontrado' });
-//     }
-
-//     const existedPicture = await posterPictureService.getByPictureId(poster.id, pictureId);
-
-//     log.info('Fazendo upload da imagem');
-//     const uploadPicture = await firebaseService.upload(file);
-
-//     let picture = null;
-//     if (!existedPicture) {
-//       return res
-//       .status(StatusCodes.NOT_FOUND)
-//       .json({ error: 'Imagem não encontrado' });
-//     } else {
-//       log.info('Atualizando imagem no banco de dados');
-//       picture = await posterPictureService.edit(poster.id, uploadPicture);
-//     }
-
-//     const result = {
-//       picture: picture.pictureUrl,
-//     };
-
-//     return res.status(StatusCodes.OK).json(result);
-//   } catch (error) {
-//     const errorMsg = 'Erro atualizar foto de poster';
-
-//     log.error(
-//       errorMsg,
-//       'app/controllers/posterPicture.controller.js',
-//       error.message,
-//     );
-
-//     return res
-//       .status(StatusCodes.INTERNAL_SERVER_ERROR)
-//       .json({ error: `${errorMsg} ${error.message}` });
-//   }
-// };
-
 const delet = async (req, res) => {
+  // #swagger.tags = ['PosterPicture']
+  // #swagger.description = 'Endpoint para excluir a imagem de um anuncio.'
+  // #swagger.security = [{ 'Bearer': [] }]
   try {
     const { user } = req;
-    const { imgs } = req.body;
+    const { pictureId } = req.params;
     log.info(
       `Inicializando remoção da foto de poster do usuário. userId=${user.id}`,
     );
@@ -126,7 +78,21 @@ const delet = async (req, res) => {
         .json({ error: 'anuncio não encontrado' });
     }
 
-    await posterPictureService.delet(poster.id, imgs);
+    const existedPictures = await posterPictureService.getByPictureId(pictureId);
+    
+    if (!existedPictures) {
+      log.info(
+        `A foto de id ${id} não esta associada ao anuncio de id ${poster.id}`,
+      );
+    }
+
+    if(existedPictures.posterId === poster.id) {
+      log.info(`Deletando imagem do firebase. image_name=${existedPictures.image_name}`);
+      await firebaseService.delet(existedPictures);
+
+      log.info(`Deletando imagem do bando da dados. posterId=${poster.id}`);
+      await posterPictureService.delet(existedPictures);
+    }
 
     log.info('Remoção realizada com sucesso');
 
@@ -148,6 +114,5 @@ const delet = async (req, res) => {
 
 module.exports = {
   create,
-  // edit,
   delet,
 };
